# CLI-Bug-Tracker

./: .gitignore  README.md
rust_app/: .env  Cargo.toml
rust_app/src/: lib.rs  main.rs
